# Program-Using-Logger

./: .gitignore  README.md  main.py  pyproject.toml
analyser/: pyproject.toml
analyser/analyser/: data_loader.py  day_timeline.py  top_20.py
grabber/: Cargo.toml
grabber/src/: main.rs
program_using_logger/: logger.py  window_handler.py  window_logger.py
visualization/: data_loader.py  day_timeline.py  top_20.py
