[tool.poetry]
name = "analyser"
version = "2.0.2"
description = ""
authors = ["IZomBie <patrik009009@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
top_20 = "analyser.top_20:main"
day_timeline = "analyser.day_timeline:main"
